<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/inicio_menu">
            <menu>
                <item
                    android:id="@+id/choiceFragment"
                    android:icon="@drawable/homemenu"
                    android:title="@string/home"
                    app:showAsAction="always"/>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/acciones_menu">
            <menu>
                <item
                    android:id="@+id/newTaskFragment"
                    android:icon="@drawable/taskmenu"
                    android:title="@string/new_task"
                    app:showAsAction="always"/>
                <item
                    android:id="@+id/newNoteFragment"
                    android:icon="@drawable/notemenu"
                    android:title="@string/new_note"
                    app:showAsAction="always"/>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/mostrar_menu">
            <menu>
                <item
                    android:id="@+id/tasksFragment"
                    android:icon="@drawable/eye"
                    android:title="@string/tareas_menu_lat"
                    app:showAsAction="always"/>
                <item
                    android:id="@+id/notesFragment"
                    android:icon="@drawable/eye"
                    android:title="@string/notas_menu_lat"
                    app:showAsAction="always"/>
            </menu>
        </item>
    </group>
</menu>