<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/office"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:paddingTop="55dp"
        android:text="@string/elige_operaci_n"
        android:textSize="50sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnNext"
        android:text="@string/siguiente"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom|left"
        android:padding="15dp"
        android:text="@string/tareas_existentes" />
    <Button
        android:id="@+id/btnNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom|right"
        android:padding="15dp"
        android:text="@string/notas_existentes" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/choicegroup"
        android:layout_gravity="center|bottom"
        android:paddingBottom="190dp">

        <RadioButton
            android:id="@+id/radio_note"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:buttonTint="@color/radiobutton_color"
            android:text="@string/nueva_nota"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <RadioButton
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/radio_task"
            app:buttonTint="@color/radiobutton_color"
            android:text="@string/nueva_tarea"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </RadioGroup>
</FrameLayout>