<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/note">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/note"/>

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_tulo_de_la_nota"
        android:textColorHint="@android:color/white"
        android:textColor="@color/white"
        android:padding="16dp"
        android:textSize="25sp"
        android:background="@android:color/transparent"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contenido_de_la_nota"
        android:textColorHint="@android:color/white"
        android:textColor="@color/white"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="10"
        android:padding="16dp"
        android:textSize="20sp"
        android:background="@android:color/transparent"
        android:layout_below="@id/editTextTitle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirmButton"
        android:text="@string/confirmar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/homemenu"
        app:backgroundTint="@android:color/white"
        app:fabSize="normal" />

</RelativeLayout>
